修改postman主界面

--- a/modules/address_book.ui
+++ b/modules/address_book.ui
@@ -53,6 +53,7 @@
                 color: white;
                 font-weight: bold;
                 font-size: 16px;
+                 padding: 2px;
             }
 
             QTableWidget::item {
