--- a/modules/user/mySend.ui
+++ b/modules/user/mySend.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>786</width>
-    <height>647</height>
+    <width>591</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>管理快递员信息</string>
+   <string>查询快递信息</string>
   </property>
   <property name="styleSheet">
    <string notr="true">
@@ -51,7 +51,7 @@
                     color: white;
                     font-weight: bold;
                     font-size: 16px;
-                    padding: 2px;
+                    padding: 4px;
                 }
 
                 QTableWidget::item {
@@ -68,7 +68,7 @@
                     background-color: #4CAF50;
                 }
 
-                QPushButton:hover {
+                 QPushButton:hover {
                     background-color: #45a049;
                     border: 1px solid #45a049;
                 }
@@ -97,24 +97,36 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>761</width>
-     <height>621</height>
+     <width>561</width>
+     <height>511</height>
     </rect>
    </property>
    <property name="title">
-    <string>快递员信息</string>
+    <string>快递信息</string>
    </property>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>40</y>
-      <width>721</width>
-      <height>341</height>
+      <y>70</y>
+      <width>521</width>
+      <height>421</height>
      </rect>
     </property>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>false</bool>
+    </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>46</number>
+    </attribute>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>125</number>
+    </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderMinimumSectionSize">
+     <number>28</number>
     </attribute>
     <row>
      <property name="text">
@@ -183,195 +195,37 @@
     </row>
     <column>
      <property name="text">
-      <string>工号</string>
+      <string>快递单号</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>账号</string>
+      <string>完整路线</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>密码</string>
+      <string>当前位置</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>姓名</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>电话</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>年龄</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>工作点</string>
+      <string>当前状态</string>
      </property>
     </column>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QPushButton" name="returnBtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>400</y>
-      <width>711</width>
-      <height>40</height>
+      <x>430</x>
+      <y>20</y>
+      <width>111</width>
+      <height>37</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>工号：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input1_lineedit"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>账号：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input2_lineedit"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>密码：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input1_lineedit_2"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget_2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>450</y>
-      <width>711</width>
-      <height>40</height>
-     </rect>
+    <property name="text">
+     <string>返回上一级</string>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>姓名：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input1_lineedit_3"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>电话：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input2_lineedit_2"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>年龄：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input1_lineedit_4"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget_3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>500</y>
-      <width>251</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>工作点：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input1_lineedit_5"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>560</y>
-      <width>531</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <item>
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>工作点：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="comboBox"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_4">
-       <property name="text">
-        <string>查询</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>新建</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>修改</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="text">
-        <string>删除</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </widget>
   </widget>
  </widget>
