--- a/modules/admin/admin_manage_deliveryman.ui
+++ b/modules/admin/admin_manage_deliveryman.ui
@@ -107,9 +107,9 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>821</width>
+      <x>80</x>
+      <y>30</y>
+      <width>721</width>
       <height>341</height>
      </rect>
     </property>
@@ -188,11 +188,6 @@
     </column>
     <column>
      <property name="text">
-      <string>账号</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
       <string>密码</string>
      </property>
     </column>
@@ -226,7 +221,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>370</y>
+      <y>380</y>
       <width>821</width>
       <height>40</height>
      </rect>
@@ -241,16 +236,6 @@
      </item>
      <item>
       <widget class="QLineEdit" name="input1_lineedit"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>账号：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="input2_lineedit"/>
      </item>
      <item>
       <widget class="QLabel" name="label_3">
@@ -268,7 +253,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>420</y>
+      <y>430</y>
       <width>821</width>
       <height>40</height>
      </rect>
@@ -310,7 +295,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>470</y>
+      <y>490</y>
       <width>581</width>
       <height>40</height>
      </rect>
@@ -338,13 +323,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>540</y>
+      <y>550</y>
       <width>581</width>
-      <height>39</height>
+      <height>40</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
