--- a/modules/register/register.ui
+++ b/modules/register/register.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LoginForm</class>
- <widget class="QWidget" name="LoginForm">
+ <class>Register</class>
+ <widget class="QWidget" name="RegisterForm">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>603</width>
-    <height>334</height>
+    <width>623</width>
+    <height>442</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,28 +16,16 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="styleSheet">
-        <string notr="true">QLabel {
-	font: 12pt &quot;幼圆&quot;;
-    font-weight: bold;
-}</string>
-       </property>
-       <property name="text">
-        <string>手机号</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="label">
        <property name="styleSheet">
-        <string notr="true">QLabel#label {
-	font: 22pt &quot;幼圆&quot;;
-    font-weight: bold;
-    qproperty-alignment: AlignCenter;
-}
-</string>
+        <string notr="true">
+            QLabel#label {
+                font: 22pt &quot;幼圆&quot;;
+                font-weight: bold;
+                qproperty-alignment: AlignCenter;
+            }
+        </string>
        </property>
        <property name="text">
         <string>快递物流管理系统</string>
@@ -45,132 +33,157 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_account">
+      <widget class="QLineEdit" name="phoneInput">
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}</string>
+        <string notr="true">
+            QLineEdit {
+                padding: 8px;
+                font-size: 14px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+            }
+    </string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="phtonLabel">
+       <property name="styleSheet">
+        <string notr="true">
+            QLabel {
+                font: 12pt &quot;幼圆&quot;;
+                font-weight: bold;
+            }
+        </string>
+       </property>
+       <property name="text">
+        <string>手机号</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="pwdInput">
+       <property name="styleSheet">
+        <string notr="true">
+            QLineEdit {
+                padding: 8px;
+                font-size: 14px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+            }
+        </string>
+       </property>
+       <property name="echoMode">
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="pwdLabel">
        <property name="styleSheet">
-        <string notr="true">QLabel {
-	font: 12pt &quot;幼圆&quot;;
-    font-weight: bold;
-}</string>
+        <string notr="true">
+            QLabel {
+                font: 12pt &quot;幼圆&quot;;
+                font-weight: bold;
+            }
+        </string>
        </property>
        <property name="text">
         <string>密码:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_password">
+     <item row="3" column="0">
+      <widget class="QLabel" name="confirmPwdLabel">
        <property name="styleSheet">
-        <string notr="true">QLineEdit {
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}</string>
+        <string notr="true">
+            QLabel {
+                font: 12pt &quot;幼圆&quot;;
+                font-weight: bold;
+            }
+        </string>
+       </property>
+       <property name="text">
+        <string>确认密码：</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="confirmPwdInput">
+       <property name="styleSheet">
+        <string notr="true">
+            QLineEdit {
+                padding: 8px;
+                font-size: 14px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+            }
+    </string>
        </property>
        <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton_login">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QPushButton" name="registerBtn">
      <property name="styleSheet">
-      <string notr="true">QPushButton {
-    padding: 8px 16px;
-	font: 15px &quot;幼圆&quot;;
-    font-weight: bold;
-    border: 1px solid #4CAF50;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #4CAF50;
-}
+      <string notr="true">
+        QPushButton {
+            padding: 8px 16px;
+            font: 15px &quot;幼圆&quot;;
+            font-weight: bold;
+            border: 1px solid #4CAF50;
+            border-radius: 4px;
+            color: #fff;
+            background-color: #4CAF50;
+        }
 
-/* 鼠标悬停时按钮样式 */
-QPushButton:hover {
-    background-color: #45a049;
-    border: 1px solid #45a049;
-}</string>
+        /* 鼠标悬停时按钮样式 */
+        QPushButton:hover {
+            background-color: #45a049;
+            border: 1px solid #45a049;
+        }
+        </string>
      </property>
      <property name="text">
-      <string>登录</string>
+      <string>确认注册</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton_register">
-     <property name="styleSheet">
-      <string notr="true">QPushButton {
-    padding: 8px 16px;
-	font: 15px &quot;幼圆&quot;;
-    font-weight: bold;
-    border: 1px solid #4CAF50;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #4CAF50;
-}
-
-/* 鼠标悬停时按钮样式 */
-QPushButton:hover {
-    background-color: #45a049;
-    border: 1px solid #45a049;
-}</string>
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-     <property name="text">
-      <string>注册</string>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
      </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton">
-     <property name="styleSheet">
-      <string notr="true">/* 设置按钮样式 */
-QPushButton {
-    padding: 8px 16px;
-	font: 15px &quot;幼圆&quot;;
-    font-weight: bold;
-    border: 1px solid #4CAF50;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #4CAF50;
-}
-
-/* 鼠标悬停时按钮样式 */
-QPushButton:hover {
-    background-color: #45a049;
-    border: 1px solid #45a049;
-}
-
-/* 游客访问按钮样式 */
-QPushButton#pushButton_visitor {
-    color: #333;
-    background-color: #ddd;
-    border: 1px solid #ddd;
-}
-
-/* 鼠标悬停时游客访问按钮样式 */
-QPushButton#pushButton_visitor:hover {
-    background-color: #bbb;
-    border: 1px solid #bbb;
-}</string>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
      </property>
-     <property name="text">
-      <string>游客访问</string>
-     </property>
-    </widget>
+    </spacer>
    </item>
   </layout>
  </widget>
