--- a/modules/user/user_modify_info.ui
+++ b/modules/user/user_modify_info.ui
@@ -127,7 +127,11 @@
       <item row="1" column="1">
        <layout class="QGridLayout" name="gridLayout">
         <item row="1" column="1">
-         <widget class="QLineEdit" name="new_password_lineedit"/>
+         <widget class="QLineEdit" name="new_password_lineedit">
+          <property name="echoMode">
+           <enum>QLineEdit::PasswordEchoOnEdit</enum>
+          </property>
+         </widget>
         </item>
         <item row="1" column="2">
          <widget class="QPushButton" name="btn_change_password">
@@ -147,7 +151,11 @@
          <widget class="QLineEdit" name="new_phone_lineedit"/>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="old_password_lineedit"/>
+         <widget class="QLineEdit" name="old_password_lineedit">
+          <property name="echoMode">
+           <enum>QLineEdit::PasswordEchoOnEdit</enum>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_old_password">
