改统一名字防止调用出错

--- a/modules/login/login.ui
+++ b/modules/login/login.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LoginForm</class>
- <widget class="QWidget" name="LoginForm">
+ <class>login</class>
+ <widget class="QWidget" name="login">
   <property name="geometry">
    <rect>
     <x>0</x>
