--- a/modules/admin/admin_main.ui
+++ b/modules/admin/admin_main.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ProfileForm</class>
- <widget class="QWidget" name="ProfileForm">
+ <class>admin_main</class>
+ <widget class="QWidget" name="admin_main">
   <property name="geometry">
    <rect>
     <x>0</x>
