--- a/modules/admin/admin_manage_postman.ui
+++ b/modules/admin/admin_manage_postman.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ProfileForm</class>
- <widget class="QWidget" name="ProfileForm">
+ <class>admin_manage_postman</class>
+ <widget class="QWidget" name="admin_manage_postman">
   <property name="geometry">
    <rect>
     <x>0</x>
