--- a/modules/deliveryman/deliverman.ui
+++ b/modules/deliveryman/deliverman.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DelivermanForm</class>
- <widget class="QWidget" name="DelivermanForm">
+ <class>deliverman</class>
+ <widget class="QWidget" name="deliverman">
   <property name="geometry">
    <rect>
     <x>0</x>
