--- a/modules/guest/guest_main.ui
+++ b/modules/guest/guest_main.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Guest_main</class>
+ <widget class="QWidget" name="Guest_main">
   <property name="geometry">
    <rect>
     <x>0</x>
