--- a/modules/register/register.ui
+++ b/modules/register/register.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Register</class>
- <widget class="QWidget" name="RegisterForm">
+ <class>register</class>
+ <widget class="QWidget" name="register">
   <property name="geometry">
    <rect>
     <x>0</x>
