--- a/modules/user/add_address_book.ui
+++ b/modules/user/add_address_book.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AddressBookForm</class>
- <widget class="QWidget" name="AddressBookForm">
+ <class>add_address_book</class>
+ <widget class="QWidget" name="add_address_book">
   <property name="geometry">
    <rect>
     <x>0</x>
