--- a/modules/user/mySend.ui
+++ b/modules/user/mySend.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ProfileForm</class>
- <widget class="QWidget" name="ProfileForm">
+ <class>mySend</class>
+ <widget class="QWidget" name="mySend">
   <property name="geometry">
    <rect>
     <x>0</x>
