--- a/modules/user/user_search_delivery.ui
+++ b/modules/user/user_search_delivery.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ProfileForm</class>
- <widget class="QWidget" name="ProfileForm">
+ <class>user_search_delivery</class>
+ <widget class="QWidget" name="user_search_delivery">
   <property name="geometry">
    <rect>
     <x>0</x>
