--- a/modules/user/user_sendout.ui
+++ b/modules/user/user_sendout.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>user_sendout</class>
+ <widget class="QWidget" name="user_sendout">
   <property name="geometry">
    <rect>
     <x>0</x>
