--- a/modules/admin/admin_search_delivery.ui
+++ b/modules/admin/admin_search_delivery.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>admin_manage_delivery</class>
- <widget class="QWidget" name="admin_manage_delivery">
+ <class>admin_search_delivery</class>
+ <widget class="QWidget" name="admin_search_delivery">
   <property name="geometry">
    <rect>
     <x>0</x>
